stylesheets/stylesheet.css
@import url('http://fonts.googleapis.com/css?family=Ruluko');
@import url('http://fonts.googleapis.com/css?family=Roboto+Condensed:300');
@import url('http://fonts.googleapis.com/css?family=PT+Sans');
@import url('http://fonts.googleapis.com/css?family=Advent+Pro');
@import url(pygment_trac.css); 

/*Slate Theme for GitHub Pages 
by Jason Costello, @jsncostello 
*******************************************************************************/ 

/******************************************************************************* 
MeyerWeb Reset 
*******************************************************************************/ 

html, body, div, span, applet, object, iframe, 
h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
a, abbr, acronym, address, big, cite, code, 
del, dfn, em, img, ins, kbd, q, s, samp, 
small, strike, strong, sub, sup, tt, var, 
b, u, i, center, 
dl, dt, dd, ol, ul, li, 
fieldset, form, label, legend, 
table, caption, tbody, tfoot, thead, tr, th, td, 
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary, 
time, mark, audio, video { 
  margin: 0; 
  padding: 0; 
  border: 0; 
  font: inherit; 
  vertical-align: baseline; 
} 

/* HTML5 display-role reset for older browsers */ 
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section { 
  display: block; 
} 

ol, ul { 
  list-style: none; 
} 

table { 
  border-collapse: collapse; 
  border-spacing: 0; 
} 

/******************************************************************************* 
Theme Styles 
*******************************************************************************/ 

body { 
  box-sizing: border-box;
  background: #5E171F; 
  border-width: 0px; 
  font-size: 18px; 
  font-family: 'PT Sans',Calibri, Helvetica, Arial, sans-serif; 
  line-height: 1.5; 
  margin:0;
  -webkit-font-smoothing: antialiased; 
} 

h1, h2, h3, h4, h5, h6 { 
  margin: 0px 0; 
  font-weight: 700; 
  font-family: 'PT Sans', Helvetica, Arial, sans-serif; 
  letter-spacing: -1px; 
} 

h1 { 
  font-size: 32px; 
  font-weight: 100; 
  font-family: 'Advent Pro', sans-serif; 
} 

h2 { 
  padding-bottom: 10px; 
  font-size: 30px; 
  font-family: 'Advent Pro', sans-serif; 
} 


h3 { 
  font-size: 24px; 
  font-weight: 100; 
  font-family: 'PT Sans', 'Advent Pro', Helvetica, Arial, sans-serif; 
  letter-spacing: 0px; 
} 

h4 { 
  padding-bottom: 10px; 
  font-size: 21px; 
} 

h5 { 
  font-size: 15px; 
} 

h6 { 
  font-size: 16px; 
} 


p { 
  margin: 10px 0 15px 0; 
} 


a { 
  text-decoration: none; 
  color: #D23C40; 
  text-shadow: none; 

  transition: color 0.5s ease; 
  transition: text-shadow 0.5s ease; 
  -webkit-transition: color 0.5s ease; 
  -webkit-transition: text-shadow 0.5s ease; 
  -moz-transition: color 0.5s ease; 
  -moz-transition: text-shadow 0.5s ease; 
  -o-transition: color 0.5s ease; 
  -o-transition: text-shadow 0.5s ease; 
  -ms-transition: color 0.5s ease; 
  -ms-transition: text-shadow 0.5s ease; 
} 

footer a:hover, a:focus { 
  color: #CBC67E; 
} 

footer a { 
  color: #F2F2F2; 
  text-decoration: underline; 
} 

section a:hover, a:focus { 
  text-decoration: underline; 
} 

footer p { 
  color: #f2f2f2; 
} 


em { 
  font-style: italic; 
} 

strong { 
  font-weight: bold; 
} 

/*img { 
  position: relative; 
  margin: 0 auto; 
  max-width: 739px; 
  padding: 5px; 
  margin: 10px 0 10px 0; 
  border: 1px solid #ebebeb; 
  box-shadow: 0 0 5px #ebebeb; 
  -webkit-box-shadow: 0 0 5px #ebebeb; 
  -moz-box-shadow: 0 0 5px #ebebeb; 
  -o-box-shadow: 0 0 5px #ebebeb; 
  -ms-box-shadow: 0 0 5px #ebebeb;
} 

p img { 
  display: inline; 
  margin: 0; 
  padding: 0; 
  vertical-align: middle; 
  text-align: center; 
  border: none; 
} */

pre, code { 
  width: 100%; 
  color: #222; 
  background-color: #fff; 

  font-family: Monaco, monospace; 
  font-size: 14px; 

  border-radius: 2px; 
  -moz-border-radius: 2px; 
  -webkit-border-radius: 2px; 
} 

pre { 
  width: 100%; 
  padding: 10px; 
  box-shadow: 0 0 10px rgba(0,0,0,.1); 
  overflow: auto; 
} 

code { 
  padding: 3px; 
  margin: 0 3px; 
  box-shadow: 0 0 10px rgba(0,0,0,.1); 
} 

pre code { 
  display: block; 
  box-shadow: none; 
} 

blockquote { 
  color: #666; 
  margin-bottom: 20px; 
  padding: 0 0 0 20px; 
  border-left: 3px solid #bbb; 
} 


ul, ol, dl { 
  margin-bottom: 10px 
} 

ul { 
  list-style: none; 
  padding-left: 0px; 
} 

li { 
  display: inline-block; 
  padding: 0px 20px 0px 0px; 
} 

li a { 
  color:#EBEBEB; 
} 

ol { 
  list-style: decimal inside; 
  padding-left: 20px; 
} 

dl dt { 
  font-weight: bold; 
} 

dl dd { 
  padding-left: 20px; 
  font-style: italic; 
} 

dl p { 
  padding-left: 20px; 
  font-style: italic; 
} 

hr { 
  height: 1px; 
  margin-bottom: 5px; 
  border: none; 
  background: url('../images/bg_hr.png') repeat-x center; 
} 

table { 
  border-collapse: collapse; 
  border-spacing: 0; 
 } 

th { 
  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif; 
  padding: 10px; 
  background: #373737; 
  color: #fff; 
 } 

td { 
  padding: 10px; 
  border: none; 
  vertical-align:middle;  
 } 

form { 
  background: #f2f2f2; 
  padding: 10px; 
} 

/******************************************************************************* 
Full-Width Styles 
*******************************************************************************/ 

.outerFull { 
  position: relative; 
  width: 100%;
  padding: 0px;
} 

.inner { 
  position: relative; 
  max-width: 65%; 
  padding: 20px 10px; 
  margin: 0 auto; 
} 

.menubar { 
  text-align: right; 
  line-height: 1; 
  color: #EBEBEB; 
  padding-bottom: .5em;
  padding-top:  10px;
  padding-right:  10px; 
  font-size: 21px; 
  font-weight: 100; 
  font-family: 'Roboto Condensed',sans-serif; 
  letter-spacing: -1px;
  width: 100%;
}

.headerClss {
  position:fixed;
  margin-top:0;
  top:0%;
  z-index:10;
  width:100%;
  background:#D23C40;
  background: -webkit-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: -o-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: -moz-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: linear-gradient(to bottom,#882022 ,#D23C40);
}

.menubar a:hover, a:focus{ 
  text-decoration:none;
  color:#CBC67E;
}

.indexPage { 
  width:100%;
  left:0;
  height:100vh;
  background:#D23C40;
  background: -webkit-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: -o-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: -moz-linear-gradient(top,#882022 0%,#D23C40 42%,#D34346 52%,#882022 100%); 
  background: linear-gradient(to bottom,#882022,#D23C40 42%,#D34346 52%,#882022 100%);
  margin: 0;
} 

.background_Image { 
  background: url("../images/dotpatten2.svg");
  /*background-repeat: repeat;*/
  /*background-repeat: repeat-y;*/
  background-repeat: repeat;
  background-position: 50% 0%;
  background-size: 20em ;
  min-width: 100%;
  min-height: 100%;
  z-index: -1:;
} 

#titleWrap { 
  border-width: 0px; 
} 

#titleWrap .inner { 
  padding: 10px 10px 10px 10px; 
} 

#mainContentWrap { 
  position: relative;
  background: #ffffff; 
  border-top: 0px; 
  border-bottom: 0px; 
  font-family:  'PT Sans', sans-serif;; 
} 

#mainContentWrap a:hover, a:focus { 
  text-decoration:underline;
}

#mainContentWrap img {
  position: relative;
  top: 0;
  left: 0;
  padding-top: 0%;
  padding-bottom: 0%; 
  width: 100%;
}

#footerWrap { 
  background: #D23C40; 
  padding: 1% 0 1% 0;
  text-align: right; 
  font-size: 15px; 
  font-weight: 100; 
  font-family: 'Ruluko',Helvetica, Arial, sans-serif;
} 

#footerWrap a{ 
  text-decoration: none; 
} 

#mainContent { 
  padding-top: 2%;
  padding-bottom: 3%;
  z-index:11;
} 

#myName { 
  margin: 0; 
  color:#EBEBEB; 
  font-size: 38px; 
  font-weight: 150; 
  } 

#myNameIndx { 
  font-size: 80px; 
  text-align:center;
  color:#CBC67E;
  font-weight: 150; 
} 

#taglineIndx { 
  font-size: 45px; 
  text-align:center;
  font-weight: 300;
  color:#EBEBEB; 
} 

#fieldsIndx { 
  font-size: 20px; 
  text-align:center;
  font-weight: 300;
  color:#EBEBEB; 
} 

#tagline { 
  color:#EBEBEB; 
  font-size: 25px; 
  font-weight: 300; 
  background: none; 
} 

#menuElement { 
  padding: 0px 20px 0px 0px; 
  color:#EBEBEB; 
} 

#forkme { 
  position: relative; 
  text-align: right; 
  font-size: 15px; 
  font-weight: 100; 
  font-family: 'Ruluko',Helvetica, Arial, sans-serif; 
} 

#forkme a{ 
  text-decoration: none; 
} 

#downloads { 
  position: absolute; 
  width: 210px; 
  z-index: 10; 
  bottom: -40px; 
  right: 0; 
  height: 70px; 
  background: url('../images/icon_download.png') no-repeat 0% 90%; 
} 

.zip_download_link { 
  display: block; 
  float: right; 
  width: 90px; 
  height:70px; 
  text-indent: -5000px; 
  overflow: hidden; 
  background: url(../images/sprite_download.png) no-repeat bottom left; 
} 

.tar_download_link { 
  display: block; 
  float: right; 
  width: 90px; 
  height:70px; 
  text-indent: -5000px; 
  overflow: hidden; 
  background: url(../images/sprite_download.png) no-repeat bottom right; 
  margin-left: 10px; 
} 

.zip_download_link:hover { 
  background: url(../images/sprite_download.png) no-repeat top left; 
} 

.tar_download_link:hover { 
  background: url(../images/sprite_download.png) no-repeat top right; 
} 

/******************************************************************************* 
Small Device Styles 
*******************************************************************************/ 

@media screen and (max-width: 480px) { 
  body { 
    font-size:16px; 
  } 

  .outerSmall { 
  position: relative; 
  width: 100%; 
  left: 0%; 
  padding: 0px;
  } 

  #downloads { 
    display: none; 
  } 

  .inner { 
    min-width: 90%; 
    max-width: 95%; 
  } 

  .menubar { 
    font-size: 22px; 
  } 

  #myName { 
  font-size: 32px; 
  } 

  #myNameIndx { 
  font-size: 50px; 
  } 

  #taglineIndx { 
  font-size: 28px; 
  }

  #fieldsIndx { 
  font-size: 12px;
  }

  h1 { 
    font-size: 28px; 
  } 

  h2 { 
    font-size: 24px; 
  } 

  h3 { 
    font-size: 21px; 
  } 

  h4 { 
    font-size: 20px; 
  } 

  h5 { 
    font-size: 12px; 
  } 

  h6 { 
    font-size: 12px; 
  } 

  code, pre { 
    min-width: 320px; 
    max-width: 480px; 
    font-size: 11px; 
  } 

}

